fixed the z-index issue between search bar and explore image

--- a/meta-minds-fe/src/App.css
+++ b/meta-minds-fe/src/App.css
@@ -11,13 +11,11 @@
 .dataResult{
   height: 320px; 
   width: 580px; 
-  z-index: 80000;
 }
 
 .dataResults{
   height: 320px; 
   width: 580px; 
-  z-index: 80000;
 }
 
 
